@@ -1,0 +1,9 @@
+<!--[if count($pages) > 0]-->
+<!--[foreach from=$pages item=page]-->
+<url>
+    <loc><!--[$baseURL]--><!--[pnmodurl modname=content type=user func=view pid=$page.id]--></loc>
+    <changefreq>daily</changefreq>
+</url>
+<!--[include file='content_include_sitemap.xml' pages=$page.subPages baseURL=$baseURL]-->
+<!--[/foreach]-->
+<!--[/if]-->
